--- a/metadata/layout.conf
+++ b/metadata/layout.conf
@@ -2,4 +2,5 @@ masters = gentoo
 sign-manifests = true
 thin-manifests = true
 use-manifests = strict
+sign-commits = true
 manifest-hashes = SHA256
